Corrected file names.

--- a/Cloth.html
+++ b/Cloth.html
@@ -1,7 +1,7 @@
 <!DOCTYPE=html>
 <head>
 	<link rel="stylesheet" type="text/css" href="Cloth.css">
-	<script type="text/javascript" src="Cloth3.js"></script>
+	<script type="text/javascript" src="Cloth.js"></script>
 </head>
 <body>
 <header>
