--- a/Cloth.html
+++ b/Cloth.html
@@ -1,7 +1,10 @@
 <!DOCTYPE=html>
 <head>
 	<link rel="stylesheet" type="text/css" href="Cloth.css">
-	<script type="text/javascript" src="Cloth.js"></script>
+	<script type="text/javascript" src="0-Cloth.js"></script>
+	<script type="text/javascript" src="1-Mesh.js"></script>
+	<script type="text/javascript" src="2-Point.js"></script>
+	<script type="text/javascript" src="3-Link.js"></script>
 </head>
 <body>
 <header>
