--- a/Cloth.html
+++ b/Cloth.html
@@ -7,9 +7,11 @@
 	<script type="text/javascript" src="3-Link.js"></script>
 </head>
 <body>
-<header>
+<header class="spread-children">
 <p>Left-Click: Drag!</p> <p>Middle-Click: Pin to the wall!</p> <p>Right-Click: Tear!</p>
 </header>
 <canvas id="c"></canvas>
-
+<div class="spread-children">
+<p id="characteristic"></p> <p id="period"></p> <p id="exponent"></p> <p id="display_for_z"></p>
+</div>
 </body>
