Canvas adjusts to the container.

--- a/Cloth.html
+++ b/Cloth.html
@@ -10,5 +10,7 @@
 <header class="spread-children">
 <p>Left-Click: Drag!</p> <p>Middle-Click: Pin to the wall!</p> <p>Right-Click: Tear!</p>
 </header>
-<canvas id="c"></canvas>
+<div id="container">
+	<div class="box">Dasoo</div>
+</div>
 </body>
