Box text and styles

--- a/Cloth.html
+++ b/Cloth.html
@@ -11,6 +11,6 @@
 <p>Left-Click: Drag!</p> <p>Middle-Click: Pin to the wall!</p> <p>Right-Click: Tear!</p>
 </header>
 <div id="container">
-	<div class="box">Dasoo</div>
+	<div class="box">Drag Me!</div>
 </div>
 </body>
