--- a/Cloth.html
+++ b/Cloth.html
@@ -5,12 +5,14 @@
 	<script type="text/javascript" src="1-Mesh.js"></script>
 	<script type="text/javascript" src="2-Point.js"></script>
 	<script type="text/javascript" src="3-Link.js"></script>
+	<script type="text/javascript" src="4-Canvas.js"></script>
+	<script type="text/javascript" src="Config.js"></script>
 </head>
 <body>
 <header class="spread-children">
 <p>Left-Click: Drag!</p> <p>Middle-Click: Pin to the wall!</p> <p>Right-Click: Tear!</p>
 </header>
 <div id="container">
-	<div class="box">Drag Me!</div>
+	<div class="dragbox">Drag Me!</div>
 </div>
 </body>
