Renamed functions to camelCase

--- a/Cloth.html
+++ b/Cloth.html
@@ -2,8 +2,8 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="Cloth.css">
 	<script type="text/javascript" src="0-Cloth.js"></script>
-	<script type="text/javascript" src="1-Mesh.js"></script>
-	<script type="text/javascript" src="2-Point.js"></script>
+	<script type="text/javascript" src="1-mesh.js"></script>
+	<script type="text/javascript" src="2-point.js"></script>
 	<script type="text/javascript" src="3-Link.js"></script>
 	<script type="text/javascript" src="4-Canvas.js"></script>
 	<script type="text/javascript" src="Config.js"></script>
