Move mouse to its own file

--- a/pyGrid.html
+++ b/pyGrid.html
@@ -6,7 +6,7 @@
 		<script type="text/javascript" src="1-Mesh.js"></script>
 		<script type="text/javascript" src="2-Point.js"></script>
 		<script type="text/javascript" src="3-Link.js"></script>
-		<script type="text/javascript" src="4-Canvas.js"></script>
+		<script type="text/javascript" src="4-Mouse.js"></script>
 		<script type="text/javascript" src="5-Config.js"></script>
 	</head>
 
