--- a/pyGrid.html
+++ b/pyGrid.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" type="text/css" href="pyGrid.css">
 		<script type="text/javascript" src="0-pyGrid.js"></script>
 		<script type="text/javascript" src="1-Mesh.js"></script>
-		<script type="text/javascript" src="2-Point.js"></script>
+		<script type="text/javascript" src="2-Node.js"></script>
 		<script type="text/javascript" src="3-Link.js"></script>
 		<script type="text/javascript" src="4-Mouse.js"></script>
 		<script type="text/javascript" src="5-Config.js"></script>
