Add dragBoxes programmatically

--- a/0-pyGrid.html
+++ b/0-pyGrid.html
@@ -16,7 +16,5 @@
 			<p>Middle-Click: Pin to the wall!</p>
 			<p>Right-Click: Tear!</p>
 		</header>
-		<div id="container">
-			<div class="dragbox">Drag Me!</div>
-		</div>
+		<div id="container"></div>
 	</body>
