Refactor dragBox logic to ist own class

--- a/0-pyGrid.html
+++ b/0-pyGrid.html
@@ -7,7 +7,8 @@
 		<script type="text/javascript" src="4-Link.js"></script>
 		<script type="text/javascript" src="5-Mouse.js"></script>
 		<script type="text/javascript" src="6-Config.js"></script>
-		<link rel="stylesheet" type="text/css" href="7-pyGrid.css">
+		<script type="text/javascript" src="7-DragBox.js"></script>
+		<link rel="stylesheet" type="text/css" href="8-pyGrid.css">
 	</head>
 
 	<body>
