--- a/0-pyGrid.html
+++ b/0-pyGrid.html
@@ -1,13 +1,13 @@
 <!DOCTYPE=html>
 
 	<head>
-		<script type="text/javascript" src="1-pyGrid.js"></script>
+		<script type="text/javascript" src="1-PyGrid.js"></script>
 		<script type="text/javascript" src="2-Graph.js"></script>
 		<script type="text/javascript" src="3-Node.js"></script>
 		<script type="text/javascript" src="4-Link.js"></script>
-		<script type="text/javascript" src="5-Mouse.js"></script>
-		<script type="text/javascript" src="6-Config.js"></script>
-		<script type="text/javascript" src="7-DragBox.js"></script>
+		<script type="text/javascript" src="5-DragBox.js"></script>
+		<script type="text/javascript" src="6-Mouse.js"></script>
+		<script type="text/javascript" src="7-Config.js"></script>
 		<link rel="stylesheet" type="text/css" href="8-pyGrid.css">
 	</head>
 
