Separate pin drawing from node drawing

--- a/00-PyGrid.html
+++ b/00-PyGrid.html
@@ -17,7 +17,8 @@
     <header class="spread-children">
         <p>Left-Click: Drag!</p>
         <p>Middle-Click: Pin to the wall!</p>
-        <p>Right-Click: Tear!</p>
+        <p>Right-Click: Mark or Tear!</p>
     </header>
+    <div class="help">See config file for details</div>
     <div id="container"></div>
 </body>
