Update help text and styles

--- a/00-PyGrid.html
+++ b/00-PyGrid.html
@@ -15,10 +15,10 @@
 
 <body>
     <header class="spread-children">
-        <p>Left-Click: Drag!</p>
-        <p>Middle-Click: Pin to the wall!</p>
-        <p>Right-Click: Mark or Tear!</p>
+        <p>Left-Click movement: Disturb the grid!</p>
+        <p>Middle-Click movement: Pin to the wall!</p>
+        <p>Right-Click movement: Mark or Tear!</p>
     </header>
-    <div class="help">See config file for details</div>
+    <div class="help">See the config file for details</div>
     <div id="container"></div>
 </body>
