--- a/00-bazGrid.html
+++ b/00-bazGrid.html
@@ -21,4 +21,6 @@
     </header>
     <div class="help">See the config file for details</div>
     <div id="container"></div>
+    <label>Pause</label>
+    <input type="checkbox" id='ctrl-pause'>
 </body>
