Add mouse selection to UI

--- a/00-bazGrid.html
+++ b/00-bazGrid.html
@@ -21,6 +21,12 @@
     </header>
     <div class="help">See the config file for details</div>
     <div id="container"></div>
+
     <label>Pause</label>
-    <input type="checkbox" id='ctrl-pause'>
+    <input id='ctrl-pause' type="checkbox">
+    <br>
+    <label>Slippy Mouse</label>
+    <input id='ctrl-mouse-slippy' type="radio" name='radio-mouse' value='slippy'>
+    <label>Pinchy Mouse</label>
+    <input id='ctrl-mouse-pinchy' type="radio" name='radio-mouse' value='pinchy'>
 </body>
