--- a/00-bazGrid.html
+++ b/00-bazGrid.html
@@ -25,8 +25,9 @@
     <label>Pause</label>
     <input id='ctrl-pause' type="checkbox">
     <br>
-    <label>Slippy Mouse</label>
+    <label>Mouse type:</label><br>
+    <label>Slippy</label>
     <input id='ctrl-mouse-slippy' type="radio" name='radio-mouse' value='slippy'>
-    <label>Pinchy Mouse</label>
+    <label>Pinchy</label>
     <input id='ctrl-mouse-pinchy' type="radio" name='radio-mouse' value='pinchy'>
 </body>
