Add UI controls for mouse action selection

--- a/00-bazGrid.html
+++ b/00-bazGrid.html
@@ -25,9 +25,16 @@
     <label>Pause</label>
     <input id='ctrl-pause' type="checkbox">
     <br>
+    <br>
     <label>Mouse type:</label><br>
     <label>Slippy</label>
     <input id='ctrl-mouse-slippy' type="radio" name='radio-mouse' value='slippy'>
     <label>Pinchy</label>
     <input id='ctrl-mouse-pinchy' type="radio" name='radio-mouse' value='pinchy'>
-</body>
+    <br>
+    <br>
+    <label>Right click action:</label><br>
+    <label>Mark</label>
+    <input id='ctrl-rclick-mark' type="radio" name='radio-rclick-action' value='mark'>
+    <label>Cut</label>
+    <input id='ctrl-rclick-cut' type="radio" name='radio-rclick-action' value='cut'></body>
